[package]
name = "watcher"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]

[dependencies]
chrono = "*"
clippy = {version = "*", optional = true}
dice = {git = "https://github.com/archer884/dice.git"}
fortune-cookie = {git = "https://github.com/archer884/fortune-cookie.git", default-features = false}
icndb = {git = "https://github.com/archer884/icndb.git", default-features = false}
quote-rs = {git = "https://github.com/archer884/quote-rs.git"}
rand = "*"
regex = "*"
rsilio = {git = "https://github.com/archer884/rsilio.git", default-features = false}
serde = "*"
serde_derive = "*"
toml = {version = "*", default-features = false, features = ["serde"]}

[dependencies.eirsee]
path = "../eirsee"

[features]
default = []
ssl = ["icndb/ssl"]
